menu, home, pagination, servicio

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,59 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    border: 0;
+}
+ul{
+    list-style: none;
+}
+header{
+    background-color: #0c0c0e;
+    color: white;
+    padding: 1rem;
+}
+header li{
+    cursor: pointer;
+}
+header > ul > li{
+    display: inline;
+    padding: 0 0.5rem;
+}
+header > ul > li:first-child{
+    position: relative;
+}
+header > ul > li:nth-child(2){
+    position: relative;
+}
+header > ul > li:nth-child(2) > ul {
+    display: grid;
+    grid-template-columns: auto auto;
+    background-color: #0c0c0e;
+    position: absolute;
+    width: 400px;
+    left: 15px;
+    top: 35px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px 1px #0c0c0e;
+    overflow: hidden;
+    z-index: 10;
+    transition: height 0.25s ease-in-out, width 0.25s ease-in-out, opacity 0.25s ease-in-out;
+}
+header > ul > li:nth-child(2) > ul.close {
+    height: 0px;
+    width: 0px;
+    opacity: 0;
+}
+header > ul > li:nth-child(2) > ul.open {
+    height: 544px;
+    width: 400px;
+    opacity: 1;
+}
+header > ul > li:nth-child(2) > ul > li {
+    padding: 0.5rem;
+}
+header > ul > li:nth-child(2) > ul > li:hover {
+    /* background-color: #313138; */
+    background-color: #eb1808;
+}
