--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -12,11 +12,11 @@ ul > li {
     border: 1px solid #c5c5c5;
     flex-basis: 321px;
 }
-ul > li > img {
+ul > li > a > img {
     width: 100%;
     height: 100%;
 }
-ul > li > div{
+ul > li > a > div{
     position: absolute;
     left: 0;
     right: 0;
@@ -34,21 +34,21 @@ ul > li > div{
     opacity: 0;
     transition: top 0.25s ease-in-out, opacity 0.25s ease-in-out, bottom 0.25s ease-in-out;
 }
-ul > li:hover > div {
+ul > li:hover > a > div {
     top: 0;
     bottom: 0;
     opacity: 1;
 }
-ul > li > div > h2{
+ul > li > a > div > h2{
     padding-bottom: 20px;
     border-bottom: 2px solid white;
     font-size: 20px;
 }
-ul > li > div > p{
+ul > li > a > div > p{
     font-size: 20px;
     color: #eb1808
 }
-ul > li > div > p > strong{
+ul > li > a > div > p > strong{
     display: block;
 }
 .loading{
