--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -12,7 +12,7 @@
             </a>
         </li>
     </ul>
-    <app-pagination (setBooks)="setListBooks($event)">></app-pagination>
+    <app-pagination></app-pagination>
 </ng-template>
 <ng-template #elseBlock>
     <div class="loading">
