--- a/src/app/components/detail/detail.component.css
+++ b/src/app/components/detail/detail.component.css
@@ -23,8 +23,14 @@ article > section > ul{
 article > section > ul > li{
     display: inline;
     background-color: #eb1808;;
-    padding: 10px;
+    padding: 10px 0;
     margin: 0 10px;
+}
+article > section > ul > li > a{
+    padding: 10px;
+}
+article > section > ul > li:hover{
+    background-color: #ba1306;
 }
 article > section > ul > li > a{
     color: white;
