change: cambios visuales

--- a/src/app/components/detail/detail.component.css
+++ b/src/app/components/detail/detail.component.css
@@ -1,7 +1,8 @@
 article{
     display: grid;
     grid-template-columns: auto auto;
-    margin: 20px auto;
+    margin: auto;
+    padding: 20px;
     column-gap: 50px;
     max-width: 1200px;
 }
