--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -4,7 +4,7 @@ ul{
     justify-content: center;
     column-gap: 20px;
     row-gap: 20px;
-    margin: 20px 0;
+    padding-top: 20px;
 }
 ul > li {
     position: relative;
@@ -64,4 +64,43 @@ ul > li > a > div > p > strong{
     color: white;
     padding: 0.5rem 1rem;
     border-radius: 5px;
+}
+form {
+    display: flex;
+    justify-content: center;
+    padding-top: 10px;
+}
+form > select{
+    font-size: 15px;
+    padding: 4px;
+    background-color: #dfdfdf;
+    border-radius: 5px 0 0 5px;
+}
+form > input{
+    font-size: 15px;
+    padding: 5px;
+    border: 1px solid #dfdfdf;
+    /* border-radius: 5px 0 0 5px; */
+}
+form > input[type="text"]:active{
+    border-color: #eb1808;
+}
+form > input[type="text"]:focus{
+    border-color: #eb1808;
+}
+header > form > input[type="text"]:focus-visible{
+    border-color: #eb1808;
+    outline-color: #eb1808;
+}
+form > button{
+    font-size: 15px;
+    padding: 5px;
+    border-radius: 0 5px 5px 0;
+    background-color: #eb1808;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+}
+form > button:hover{
+    background-color: #ba1306;
 }
